@@ -1388,11 +1388,10 @@
 				  <property name="left_margin">5</property>
 				  <property name="right_margin">0</property>
 				  <property name="indent">0</property>
-				  <property name="text" translatable="yes">You have to make room in one or more of your hard disks in order to have GNU/Linux properly installed. 3 partitions are necessary:
+				  <property name="text" translatable="yes">You have to make room in one or more of your hard disks in order to have GNU/Linux properly installed. 2 partitions are necessary:
 · The root partition (“/”), with a minimum size of 1.5 GB.
-· The home partition (“/home”), of 512 MB at least.
 · The swap partition (“swap”), with 256 MB or more.
-You can now modify your existing partition table and select where you wan what.
+You can now modify your existing partition table and select where you want what.
 Remember that you can keep the data in a previous home partition – just leave it as it is and it will not be formatted.
 Alternatively, it is possible to return to the previous page to select an easier partitioning method.</property>
 				</widget>
@@ -1594,9 +1593,9 @@ Alternatively, it is possible to return to the previous page to select an easier
 			      <property name="left_margin">5</property>
 			      <property name="right_margin">0</property>
 			      <property name="indent">0</property>
-			      <property name="text" translatable="yes">Now you should have at least 3 GNU/Linux partitions with space enough. It's time to specify where you want every component to be installed.
+			      <property name="text" translatable="yes">Now you should have at least 2 GNU/Linux partitions with space enough. It's time to specify where you want every component to be installed.
 Proceed as follows: select one partition in the column on the left and link it with one mount point on the right. Repeat for every desired partition.
-There are 3 necessary “mount points” – they must be associated with 3 partitions. They are “/”, “/home” and “swap”.
+There are 2 necessary “mount points” – they must be associated with 2 partitions. They are “/” and “swap”.
 If you kept an intact home partition, you can now link it with the “/home” mount point. It will not be formatted, so data is preserved.</property>
 			    </widget>
 			  </child>
